# late-night-confessions

./: .env-example  Cargo.toml  README.md
.cargo/: config
migrations/2021-02-01-210932_confessions_table/: down.sql  up.sql
site/static/: confessions.js  styles.css
src/: error.rs  main.rs  models.rs  schema.rs
templates/: index.html
