[package]
name = "late-night-rocket"
version = "1.0.0"
authors = ["pxjohnny <johnny@perimeterx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev" }
failure = {version = "0.1.8", features = ["derive"] }
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0.123", features = ["derive"] }
askama = "0.10.5"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
version = "0.5.0-dev"
default-features = false
features=["json", "diesel_postgres_pool"]
